services/homarr-v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr-v1
spec:
  selector:
    app: homarr
  ports:
  - port: 3000
    targetPort: 3000
    name: http
